Checkout Header visibility issue fixed z-index

--- a/src/components/checkout/steps/common/header/header.scss
+++ b/src/components/checkout/steps/common/header/header.scss
@@ -6,6 +6,7 @@
 
     overflow: visible;
     background-color: whitesmoke;
+    z-index: 1;
 
     .checkout_back_btn {
         margin: 13px 7px;
